<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/dialog_loan_item_name"
        style="@style/dialog_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sample"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="70dp"
        android:id="@+id/dialog_loan_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_loan_item_price"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        style="@style/dialog_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="70dp"
            android:text="sample"
            android:id="@+id/dialog_loan_price"
            style="@style/coin_dialog"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_loan_nb_days"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        style="@style/dialog_title" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginLeft="70dp"
        android:id="@+id/dialog_loan_input_days"
        />



</LinearLayout>